Fixed logo alignment

--- a/src/components/LogoContainer/LogoContainer.css
+++ b/src/components/LogoContainer/LogoContainer.css
@@ -28,11 +28,11 @@
 }
 
 .textLogo {
-    font-size: 1.5vw;
+  font-size: 12px;
   text-align: center;
   padding-top: 10%;
   width: 60px;
-  word-break: break-all;
+  /*word-break: break-all;*/
 }
 
 @media(max-width: 400px) {
